<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<!-- Applications names -->
	<string name="app_name">Puls\'Droid</string>
	<string name="irc_name">Puls\'Droid Chat</string>
	
	<!-- Menu names -->
	<string name="irc_label">IRC</string>
	<string name="settings_label">Settings</string>
	
	<!-- Puls Channels -->
	<string name="puls_radio">Puls\'Radio</string>
	<string name="puls_eighty">Puls\'80</string>
	<string name="puls_ninety">Puls\'90</string>
	<string name="puls_trance">Puls\'Trance</string>	
	
	<!-- IRC Send Button name -->
	<string name="send">Send</string>
	
	<!-- IRC Session Messages -->
	<string name="irc_initializing">Initializing...</string>
	<string name="irc_connecting">Connecting...</string>
	<string name="is_away"> is away: </string>
	<string name="connection_lost">Connection Lost!</string>
	<string name="ctcp_from"></string>
	<string name="invitation_from"></string>
	<string name="invitation_to_channel"></string>
	<string name="kicked_from_channel"></string>
	<string name="joined_channel"></string>
	<string name="topic_is"></string>
	<string name="nicks_are"></string>
	<string name="is_now_know_as"></string>
	<string name="nick_already_in_use"></string>
	<string name="notice_by"></string>
	<string name="is"></string>
	<string name="was"></string>
	<string name="joined"></string>
	<string name="left"></string>
	<string name="quitted"></string>
	<string name="error"></string>
	
	<!-- Preferences names -->
	<string name="settings">Puls\'Droid settings</string>
	<string name="languages">Languages</string>
	<string name="languages_summary">Select your interface language</string>
	<string name="irc_settings">IRC settings</string>
	<string name="nickname">Nickname</string>
	<string name="nickname_summary">Select your IRC Chan Nickname</string>
	<string name="low_speed">Low-speed connection</string>
	<string name="low_speed_summary">Use low flow urls ?</string>
	<string name="news">What\'s New</string>
	<string name="new_summary">Last news of Puls\'Droid player</string>
	<string name="about_pulsdroid">About Puls\'Droid</string>
	<string name="about_pulsdroid_summary">Informations about Puls\'Droid player</string>
	<string name="terms">Terms of Use</string>
	<string name="terms_summary">License informations</string>
	
	<!-- Notification -->
	<string name="notifi_execution">Puls\'Droid Launched</string>
	
	<!-- Chronometer -->
	<string name="chronometer_initial_format"><xliff:g id="initial-format">%s</xliff:g></string>
	
	<!-- About -->
	<string name="about_title">About</string>
	<string name="about_version">Version 1.0 R5 (13/12/2010)</string>
	<string name="about_copyright">Copyright &#169; 2010 www.pulsradio.com \n\nCoded by &#60;David SANCHEZ&#62;\n\nAll rights reserved.</string>
</resources>
